Replaced 'var' with 'const' & 'let' and added overflow to css. (2) Reinstalled node modules to, hopefully, fix the heroku deploy issue.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,6 @@
 /* Elements */
 body {
+  overflow: auto;
   padding: 10px;
   margin: 0;
   font-family: 'Dancing Script', cursive;
